# http2.zig

./: .gitignore  LICENSE  Makefile  README.md  build.zig  build.zig.zon  http2.zig  zlint.json
.github/: PIPELINE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  h2spec.yml  release.yml  test.yml
benchmarks/: Makefile  README.md  async_server.zig  bench.sh  benchmark.sh  benchmark.zig  build.zig  build.zig.zon  h2load_bench.sh  server.zig
benchmarks/httparena/: compare-local.sh  compare.sh  run-actix-tls.sh  run-actix.sh  run.sh
benchmarks/httparena/actix/: Cargo.toml  Dockerfile  README.md  meta.json
benchmarks/httparena/actix-h2c/: Cargo.toml
benchmarks/httparena/actix-h2c/src/: main.rs
benchmarks/httparena/actix/src/: main.rs
example/hello-world/: build.zig  build.zig.zon
examples/: basic_tls.zig  tls_server.zig  turboapi.zig
examples/hello-world/: Makefile  build.zig  build.zig.zon
http2/: connection.zig  error.zig  frame.zig  hpack.zig  huffman.zig  stream.zig  tls.zig
http2/boringssl/: boringssl-bindings.zig
src/: async_connection.zig  async_io.zig  budget_assertions.zig  connection.zig  error.zig  frame.zig  frame_handler.zig  handler.zig  hpack.zig  http2.zig  http2_cluster_sim.zig  http2_sim.zig  http_priority.zig  huffman.zig  io_adapters.zig  main.zig  memory_budget.zig  path.zig  response.zig  server.zig  sim_common.zig  simd_frame_parser.zig  static_allocator.zig  stream.zig  stream_storage.zig  tls.zig  transport.zig  worker_pool.zig
src/io/: Kqueue.zig
(+12 files in other folders)
