[package]
name = "httparena-actix-h2c"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.5" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num_cpus = "1"
futures-util = "0.3"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
panic = "abort"
