[package]
name = "httparena-actix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["rustls-0_23", "compress-brotli", "compress-gzip"] }
actix-files = "0.6"
actix-rt = "2"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num_cpus = "1"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
futures-util = "0.3"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
panic = "abort"
